# practice_oneapi

./: CMakeLists.txt  README.txt
oneapi_test01_official/: CMakeLists.txt
oneapi_test01_official/cl_test_01_make_executable/: CMakeLists.txt
oneapi_test01_official/cl_test_02_make_library/: CMakeLists.txt
oneapi_test01_official/cl_test_02_make_library/cl_build_lib/: CMakeLists.txt  cl_build_lib.cpp  cl_build_lib.hpp
oneapi_test01_official/cl_test_03_use_library/: CMakeLists.txt
oneapi_test01_official/cl_test_03_use_library/use_cl_library/: CMakeLists.txt  use_cl_library.cpp  use_cl_library.hpp
oneapi_test01_official/cl_test_03_use_library/use_icx_library/: CMakeLists.txt  use_icx_library.hpp
oneapi_test01_official/icx_test_01_make_executable/: CMakeLists.txt
oneapi_test01_official/icx_test_01_make_executable/vector_add_buffer/: CMakeLists.txt  vector_add_buffers.cpp  vector_add_buffers.hpp
oneapi_test01_official/icx_test_01_make_executable/vector_add_usm/: CMakeLists.txt  vector_add_usm.cpp  vector_add_usm.hpp
oneapi_test01_official/icx_test_02_make_library/: CMakeLists.txt
oneapi_test01_official/icx_test_02_make_library/icx_build_lib/: CMakeLists.txt  icx_build_lib.cpp  icx_build_lib.hpp
oneapi_test01_official/icx_test_03_use_library/: CMakeLists.txt
oneapi_test01_official/icx_test_03_use_library/use_icx_library/: CMakeLists.txt  use_icx_library.cpp  use_icx_library.hpp
oneapi_test02_user/: CMakeLists.txt
oneapi_test02_user/icx_01_make_library/: CMakeLists.txt
oneapi_test02_user/icx_02_use_library/: CMakeLists.txt
(+6 files in other folders)
